--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="/assets/shivani verma cv 2023 (1).pdf" >Download cv</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -69,7 +71,7 @@
                             high-performing and delightful experiences tailored and conversion-focused</p>
                         <div data-aos="fade-up" data-aos-delay="600">
                             <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
-                            <a href="#" class="link-custom">Call: (233) 3454 2342</a>
+                            <a href="tel:9354197715" class="link-custom">Call: (+91) 9354197715</a>
                         </div>
                     </div>
                 </div>
@@ -403,14 +405,13 @@
             <div class="container">
                 <div class="row gy-4 justify-content-between">
                     <div class="col-auto">
-                        <p class="mb-0">Designed by <a href="#" class="fw-bold">SA7MAN</a></p>
+                        <p class="mb-0">Develope by <a href="#" class="fw-bold">SHIVANI"</a></p>
                     </div>
                     <div class="col-auto">
                         <div class="social-icons">
-                            <a href="#"><i class="lab la-twitter"></i></a>
-                            <a href="#"><i class="lab la-instagram"></i></a>
-                            <a href="#"><i class="lab la-dribbble"></i></a>
-                            <a href="#"><i class="lab la-github"></i></a>
+                            <a href="https://www.facebook.com/shivaniverma02000" target="_blank"><i class="lab la-facebook"></i></a>
+                            <a href="https://www.instagram.com/btw__its_shivani/?next=%2F" target="_blank"><i class="lab la-instagram"></i></a>
+                            <a href="https://github.com/Shivani862000" target="_blank"><i class="lab la-github"></i></a>
                         </div>
                     </div>
                 </div>
