--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/aos.css">
     <link rel="stylesheet" href="./assets/css/line-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="/assets/images/cv.png">
+    <link rel="icon" type="image/x-icon" href="/assets/images/portfolio.png">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -69,7 +69,7 @@
                                 Developer</span> FROM Delhi, India</h1>
                         <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I am Shivani verma , And I craft
                             high-performing and delightful experiences tailored and conversion-focused</p>
-                        <div data-aos="fade-up" data-aos-delay="600">
+                        <div class="" data-aos="fade-up" data-aos-delay="600">
                             <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
                             <a href="tel:9354197715" class="link-custom">Call: (+91) 9354197715</a>
                         </div>
