--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shivani Verma Frontend Developer</title>
+    <title>Shivani-Verma</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/aos.css">
     <link rel="stylesheet" href="./assets/css/line-awesome.min.css">
@@ -67,8 +67,7 @@
                     <div class="col-lg-10">
                         <h1 class="display-4 fw-bold" data-aos="fade-up">I'M A <span class="text-brand">Frontend
                                 Developer</span> FROM Delhi, India</h1>
-                        <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I am Shivani verma , And I craft
-                            high-performing and delightful experiences tailored and conversion-focused</p>
+                        <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I am Shivani verma, Logical and results-driven Frontend Developer dedicated to building and optimizing user-focused websites for customers with various business objectives. Judicious and creative when crafting effective websites, apps and platforms to propel competitive advantage and revenue growth. Technically proficient and analytical problem solver with calm and focused demeanor.</p>
                         <div class="" data-aos="fade-up" data-aos-delay="600">
                             <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
                             <a href="tel:9354197715" class="link-custom">Call: (+91) 9354197715</a>
@@ -98,9 +97,9 @@
                             <div class="iconbox rounded-4">
                                 <i class="las la-feather"></i>
                             </div>
-                            <h5 class="mt-4 mb-2">UX Design</h5>
+                            <h5 class="mt-4 mb-2">Wordpress Developer</h5>
                             <p>I craft high-performing and delightful experiences tailored and conversion-focused</p>
-                            <a href="#" class="link-custom">Read More</a>
+                            <!-- <a href="#" class="link-custom">Read More</a> -->
                         </div>
                     </div>
 
@@ -109,9 +108,9 @@
                             <div class="iconbox rounded-4">
                                 <i class="las la-pencil-ruler"></i>
                             </div>
-                            <h5 class="mt-4 mb-2">Branding</h5>
+                            <h5 class="mt-4 mb-2">SEO</h5>
                             <p>I craft high-performing and delightful experiences tailored and conversion-focused</p>
-                            <a href="#" class="link-custom">Read More</a>
+                            <!-- <a href="#" class="link-custom">Read More</a> -->
                         </div>
                     </div>
 
@@ -120,9 +119,9 @@
                             <div class="iconbox rounded-4">
                                 <i class="las la-laptop-code"></i>
                             </div>
-                            <h5 class="mt-4 mb-2">Web Designing</h5>
+                            <h5 class="mt-4 mb-2">Web Applications</h5>
                             <p>I craft high-performing and delightful experiences tailored and conversion-focused</p>
-                            <a href="#" class="link-custom">Read More</a>
+                          
                         </div>
                     </div>
 
@@ -151,7 +150,7 @@
                                 <img class="rounded-4" src="./assets/images/project-1.jpg" alt="">
                             </div>
                             <div class="card-custom-content p-4">
-                                <h4>Startup Landing Page</h4>
+                                <h4>Prodapt website</h4>
                                 <p>Innovation that exceeds expectations. Astra is a true template equiqed with all the elements you could ever need to put together</p>
                                 <a href="#" class="link-custom">Read More</a>
                             </div>
@@ -164,7 +163,7 @@
                                 <img class="rounded-4" src="./assets/images/project-2.png" alt="">
                             </div>
                             <div class="card-custom-content p-4">
-                                <h4>Startup Landing Page</h4>
+                                <h4>Yugantar Website</h4>
                                 <p>Innovation that exceeds expectations. Astra is a true template equiqed with all the elements you could ever need to put together</p>
                                 <a href="#" class="link-custom">Read More</a>
                             </div>
@@ -177,7 +176,7 @@
                                 <img class="rounded-4" src="./assets/images/project-3.png" alt="">
                             </div>
                             <div class="card-custom-content p-4">
-                                <h4>Startup Landing Page</h4>
+                                <h4>Healthy planet Website</h4>
                                 <p>Innovation that exceeds expectations. Astra is a true template equiqed with all the elements you could ever need to put together</p>
                                 <a href="#" class="link-custom">Read More</a>
                             </div>
@@ -190,7 +189,7 @@
                                 <img class="rounded-4" src="./assets/images/project-4.png" alt="">
                             </div>
                             <div class="card-custom-content p-4">
-                                <h4>Startup Landing Page</h4>
+                                <h4>Other </h4>
                                 <p>Innovation that exceeds expectations. Astra is a true template equiqed with all the elements you could ever need to put together</p>
                                 <a href="#" class="link-custom">Read More</a>
                             </div>
@@ -221,25 +220,28 @@
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Master of Software Engineering</h4>
-                                    <p class="text-brand mb-2">De Mars University Venston Bay (2015 - 2020)</p>
-                                    <p class="mb-0">All we are more and design lorem ipsum dolor creativity sit amet consectetur adipisicing elit</p>
+                                    <h4>B.tech from Compurter Science</h4>
+                                    <p class="text-brand mb-2">Abdul Kalam Technical University (2018 - 2022)</p>
+                                    <p class="text-brand mb-2">Mohan Nagar Ghaziabad , UP</p>
+                                    <p class="mb-0">78% </p>
                                 </div>
                             </div>
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Master of Software Engineering</h4>
-                                    <p class="text-brand mb-2">De Mars University Venston Bay (2015 - 2020)</p>
-                                    <p class="mb-0">All we are more and design lorem ipsum dolor creativity sit amet consectetur adipisicing elit</p>
+                                    <h4>Senior Secondary School</h4>
+                                    <p class="text-brand mb-2">s.k.v no.1 (2017 - 2018)</p>
+                                    <p class="text-brand mb-2"> Yamuna Vihar Delhi-110053</p>
+                                    <p class="mb-0">7.4 CGPA</p>
                                 </div>
                             </div>
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Master of Software Engineering</h4>
-                                    <p class="text-brand mb-2">De Mars University Venston Bay (2015 - 2020)</p>
-                                    <p class="mb-0">All we are more and design lorem ipsum dolor creativity sit amet consectetur adipisicing elit</p>
+                                    <h4>High School</h4>
+                                    <p class="text-brand mb-2">S.k.v no.2 (2015 - 2016)</p>
+                                    <p class="text-brand mb-2"> Yamuna Vihar Delhi-110053 </p>
+                                    <p class="mb-0"> 7.2 CGPA</p>
                                 </div>
                             </div>
 
@@ -254,24 +256,24 @@
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Applications developer</h4>
-                                    <p class="text-brand mb-2">Twitter (2018 - 2020)</p>
+                                    <h4>Frontend developer</h4>
+                                    <p class="text-brand mb-2">ICD (Currently working)</p>
                                     <p class="mb-0">All we are more and design lorem ipsum dolor creativity sit amet consectetur adipisicing elit</p>
                                 </div>
                             </div>
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Applications developer</h4>
-                                    <p class="text-brand mb-2">Twitter (2018 - 2020)</p>
+                                    <h4>Frontend developer Intern</h4>
+                                    <p class="text-brand mb-2">Itu Chaudhari Design (Feb 2022 - April 2022)</p>
                                     <p class="mb-0">All we are more and design lorem ipsum dolor creativity sit amet consectetur adipisicing elit</p>
                                 </div>
                             </div>
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Applications developer</h4>
-                                    <p class="text-brand mb-2">Twitter (2018 - 2020)</p>
+                                    <h4>Web developer</h4>
+                                    <p class="text-brand mb-2">Brand Samosa (OCt 2021 - Dec 2021)</p>
                                     <p class="mb-0">All we are more and design lorem ipsum dolor creativity sit amet consectetur adipisicing elit</p>
                                 </div>
                             </div>
