--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#reviews">Reviews</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item">
@@ -67,7 +64,7 @@
                     <div class="col-lg-10">
                         <h1 class="display-4 fw-bold" data-aos="fade-up">I'M A <span class="text-brand">Frontend
                                 Developer</span> FROM Delhi, India</h1>
-                        <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I am Shivani verma, Logical and results-driven Frontend Developer dedicated to building and optimizing user-focused websites for customers with various business objectives. Judicious and creative when crafting effective websites, apps and platforms to propel competitive advantage and revenue growth. Technically proficient and analytical problem solver with calm and focused demeanor.</p>
+                        <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I am Shivani verma, Dedicated frontend developer with 2 years of expertise in React and Next.js. Proficient in GraphQL and skilled at implementing headless CMS solutions for streamlined content management. Solid foundation in HTML and CSS, complemented by basic MongoDB and Node.js knowledge. Excels in API integration, ensuring seamless connectivity for dynamic web applications. Adept at creating visually appealing, responsive interfaces while maintaining a focus on optimal user experiences. Passionate about staying updated on the latest web development trends.</p>
                         <div class="" data-aos="fade-up" data-aos-delay="600">
                             <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
                             <a href="tel:9354197715" class="link-custom">Call: (+91) 9354197715</a>
@@ -95,10 +92,16 @@
                     <div class="col-md-4" data-aos="fade-up">
                         <div class="service p-4 bg-base rounded-4 shadow-effect">
                             <div class="iconbox rounded-4">
-                                <i class="las la-feather"></i>
+                                <i class="las la-laptop-code"></i>
                             </div>
-                            <h5 class="mt-4 mb-2">Wordpress Developer</h5>
-                            <p>I craft high-performing and delightful experiences tailored and conversion-focused</p>
+                            <h5 class="mt-4 mb-2">Responsive UI/UX Design</h5>
+                            <ul>
+                             <li>   Implement responsive design principles to enhance accessibility and ensure a consistent experience across platforms.</li>
+                             <li>   Create visually appealing and user-friendly interfaces that adapt seamlessly to various devices and screen sizes.</li>
+                           <li> Utilize HTML and CSS skills to craft intuitive layouts and enhance user interactions.</li>
+                            <li>Conduct usability testing to gather feedback and iterate on designs for optimal user experience.</li>
+                            <li>Collaborate with UX/UI designers to translate wireframes and prototypes into functional web applications.</li>
+                            </ul>
                             <!-- <a href="#" class="link-custom">Read More</a> -->
                         </div>
                     </div>
@@ -106,10 +109,17 @@
                     <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                         <div class="service p-4 bg-base rounded-4 shadow-effect">
                             <div class="iconbox rounded-4">
-                                <i class="las la-pencil-ruler"></i>
+                                <i class="las la-laptop-code"></i>
+            
                             </div>
-                            <h5 class="mt-4 mb-2">SEO</h5>
-                            <p>I craft high-performing and delightful experiences tailored and conversion-focused</p>
+                            <h5 class="mt-4 mb-2">React and Next.js Development</h5>
+                            <ul>
+                                <li>Expertise in building dynamic and efficient user interfaces using React and Next.js.</li>
+                                <li>  Develop modular and reusable components to ensure code maintainability and scalability.</li>
+                                 <li>  Leverage state management tools like Redux for effective data handling in complex applications.</li>
+                                 <li>  Optimize performance by implementing code-splitting, lazy loading, and other React and Next.js best practices.</li>
+                                 <li>  Stay updated on the latest React and Next.js features and contribute to the adoption of industry best practices.</li>
+                            </ul>
                             <!-- <a href="#" class="link-custom">Read More</a> -->
                         </div>
                     </div>
@@ -119,8 +129,14 @@
                             <div class="iconbox rounded-4">
                                 <i class="las la-laptop-code"></i>
                             </div>
-                            <h5 class="mt-4 mb-2">Web Applications</h5>
-                            <p>I craft high-performing and delightful experiences tailored and conversion-focused</p>
+                            <h5 class="mt-4 mb-2">API Integration and Data Management
+                            </h5>
+                            <ul>
+                                <li> Adept at integrating APIs to fetch and update data, ensuring seamless communication between the frontend and backend.</li>
+                                <li> Implement GraphQL for efficient data querying, reducing over-fetching and under-fetching of data.</li>
+                                <li>Utilize asynchronous programming techniques to manage data fetching and updates without blocking the user interface.</li>
+                                <li>Apply knowledge of MongoDB to perform basic database operations, contributing to effective data storage and retrieval.</li>
+                            </ul>
                           
                         </div>
                     </div>
@@ -147,7 +163,7 @@
                     <div class="col-md-6" data-aos="fade-up">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/project-1.jpg" alt="">
+                                <img class="rounded-4" src="./assets/images/Screenshot (2).png" alt="">
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Prodapt website</h4>
@@ -258,7 +274,7 @@
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Frontend developer</h4>
                                     <p class="text-brand mb-2">ICD (Currently working)</p>
-                                    <p class="mb-0">All we are more and design lorem ipsum dolor creativity sit amet consectetur adipisicing elit</p>
+                                    <p class="mb-0">Delhi Saket</p>
                                 </div>
                             </div>
 
@@ -266,7 +282,7 @@
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Frontend developer Intern</h4>
                                     <p class="text-brand mb-2">Itu Chaudhari Design (Feb 2022 - April 2022)</p>
-                                    <p class="mb-0">All we are more and design lorem ipsum dolor creativity sit amet consectetur adipisicing elit</p>
+                                    <p class="mb-0">Delhi Saket</p>
                                 </div>
                             </div>
 
@@ -274,7 +290,7 @@
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Web developer</h4>
                                     <p class="text-brand mb-2">Brand Samosa (OCt 2021 - Dec 2021)</p>
-                                    <p class="mb-0">All we are more and design lorem ipsum dolor creativity sit amet consectetur adipisicing elit</p>
+                                    <p class="mb-0">Noida sec-16</p>
                                 </div>
                             </div>
 
@@ -287,82 +303,6 @@
             </div>
         </section>
         <!-- //ABOUT -->
-
-        <!-- REVIEWS -->
-        <section id="reviews" class="full-height px-lg-5">
-            <div class="container">
-
-                <div class="row pb-4" data-aos="fade-up">
-                    <div class="col-lg-8">
-                        <h6 class="text-brand">REVIEWS</h6>
-                        <h1>What our subscribers say</h1>
-                    </div>
-                </div>
-
-                <div class="row gy-4">
-
-                    <div class="col-md-4" data-aos="fade-up">
-
-                        <div class="review shadow-effect bg-base p-4 rounded-4">
-                            <div class="text-brand h5">
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                            </div>
-                            <p class="my-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel quae facilis fugiat molestias ab illum excepturi, qui optio modi asperiores, delectus maiores!</p>
-                            <div class="person">
-                                <h5 class="mb-0">Jon Doe</h5>
-                                <p class="mb-0">Twitter</p>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-
-                        <div class="review shadow-effect bg-base p-4 rounded-4">
-                            <div class="text-brand h5">
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                            </div>
-                            <p class="my-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel quae facilis fugiat molestias ab illum excepturi, qui optio modi asperiores, delectus maiores!</p>
-                            <div class="person">
-                                <h5 class="mb-0">Jon Doe</h5>
-                                <p class="mb-0">Twitter</p>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-4" data-aos="fade-up" data-aos-delay="600">
-
-                        <div class="review shadow-effect bg-base p-4 rounded-4">
-                            <div class="text-brand h5">
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                            </div>
-                            <p class="my-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel quae facilis fugiat molestias ab illum excepturi, qui optio modi asperiores, delectus maiores!</p>
-                            <div class="person">
-                                <h5 class="mb-0">Jon Doe</h5>
-                                <p class="mb-0">Twitter</p>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
-        </section>
-        <!-- //REVIEWS -->
 
 
         <!-- CONTACT -->
