--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#skils">Skills</a>
+                        <a class="nav-link" href="#skill">Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#services">Services</a>
@@ -70,8 +70,9 @@
                                 Developer</span> FROM Delhi, India</h1>
                         <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I am Shivani verma, Dedicated frontend developer with 2 years of expertise in React and Next.js. Proficient in GraphQL and skilled at implementing headless CMS solutions for streamlined content management. Solid foundation in HTML and CSS, complemented by basic MongoDB and Node.js knowledge. Excels in API integration, ensuring seamless connectivity for dynamic web applications. Adept at creating visually appealing, responsive interfaces while maintaining a focus on optimal user experiences. Passionate about staying updated on the latest web development trends.</p>
                         <div class="" data-aos="fade-up" data-aos-delay="600">
-                            <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
-                            <a href="tel:9354197715" class="link-custom">Call: (+91) 9354197715</a>
+                            <a href="#work" class="btn btn-brand me-2">Explore My Work</a>
+                             <a href="#skill" class="btn btn-brand me-2">Explore My Skills</a>
+<!--                             <a href="tel:9354197715" class="link-custom">Call: (+91) 9354197715</a> -->
                         </div>
                     </div>
                 </div>
@@ -166,7 +167,7 @@
         </section>
         <!-- //ABOUT -->
           <!-- Skills -->
-          <section id="skills" class="full-height px-lg-5">
+          <section id="skill" class="full-height px-lg-5">
             <div class="container">
 
                 <div class="row pb-4" data-aos="fade-up">
