--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="#work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/assets/shivani verma cv 2023 (1).pdf" >Download cv</a>
+                        <a class="nav-link" href="/assets/shivanicb.pdf" >Download cv</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -99,7 +99,7 @@
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>B.tech from Compurter Science</h4>
+                                    <h4>B.tech from Computer Science</h4>
                                     <p class="text-brand mb-2">Abdul Kalam Technical University (2018 - 2022)</p>
                                     <p class="text-brand mb-2">Mohan Nagar Ghaziabad , UP</p>
                                     <p class="mb-0">78% </p>
