--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="#work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/assets/shivanicb.pdf" >Download cv</a>
+                        <a class="nav-link" href="/assets/shivanicv.pdf" >Download cv</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
