--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10">
-                        <h1 class="display-4 fw-bold" data-aos="fade-up">I'M A <span class="text-brand">Frontend
-                                Developer</span> FROM Delhi, India</h1>
+                        <h1 class="display-4 fw-bold" data-aos="fade-up">I'M A <span class="text-brand">Full Stack Developer</span> FROM Delhi, India</h1>
                         <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I am Shivani verma, Dedicated Full Stack Developer with 2.8 years of expertise in React and Next.js. Proficient in GraphQL and skilled at implementing headless CMS solutions for streamlined content management. Solid foundation in HTML and CSS, complemented by basic MongoDB and Node.js knowledge. Excels in API integration, ensuring seamless connectivity for dynamic web applications. Adept at creating visually appealing, responsive interfaces while maintaining a focus on optimal user experiences. Passionate about staying updated on the latest web development trends.</p>
                         <div class="" data-aos="fade-up" data-aos-delay="600">
                             <a href="#work" class="btn btn-brand me-2">Explore My Work</a>
