--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/assets/Shivani VermaCV.pdf" >Download cv</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                   
+                  
                 </ul>
             </div>
         </div>
@@ -404,7 +401,7 @@
 
 
         <!-- CONTACT -->
-        <section id="contact" class="full-height px-lg-5">
+        <!-- <section id="contact" class="full-height px-lg-5">
             <div class="container">
 
                 <div class="row justify-content-center text-center">
@@ -437,7 +434,7 @@
 
 
             </div>
-        </section>
+        </section> -->
         <!-- //CONTACT -->
 
         <!-- FOOTER -->
