--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
                                     <li>HTML, CSS, SCSS</li>
                                     <li>Tailwind CSS, Bootstrap</li>
                                     <li>JavaScript (ES6+)</li>
-                                    <li>REST API, GraphQL</li>
+                                    <li>REST API</li>
+                                    <li>GraphQL</li>
                                 </ul>
                             </div>
                         </div>
@@ -207,7 +208,8 @@
                                 <ul>
                                     <li>Node.js, Express.js</li>
                                     <li>Python, WebFlux</li>
-                                    <li>SQL, MongoDB, PostgreSQL, PySpark</li>
+                                    <li>SQL, MongoDB, PostgreSQL</li>
+                                    <li>PySpark</li>
                                     <li>REST API, GraphQL</li>
                                     <li>Snowflake, Kubernetes</li>
                                 </ul>
@@ -229,7 +231,8 @@
                                     <li>Docker, CI/CD</li>
                                     <li>Linux</li>
                                     <li>Azure Data Factory, Databricks</li>
-                                    <li>PostgreSQL, Blob Storage, Application Insights</li>
+                                    <li>PostgreSQL, Blob Storage</li>
+                                    <li>Application Insights</li>
                                 </ul>
                             </div>
                         </div>
